force-app/main/default/objects/Opportunity/fields/Activity_Mass_Update__c.field-meta.xml
<CustomField>
    <fullName>Activity_Mass_Update__c</fullName>
    <label>Activity Mass Update on Engagement</label>
    <type>TextArea</type>
</CustomField>