force-app/main/default/objects/Opportunity/fields/Cage_free_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Cage_free_Commitment__c</fullName>
    <label>Cage-free Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Asia commitment</fullName>
            </value>
            <value>
                <fullName>Partial Asia commitment</fullName>
            </value>
            <value>
                <fullName>No Asia commitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>