force-app/main/default/objects/Opportunity/fields/Commitment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Notes__c</fullName>
    <label>Commitment Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>