force-app/main/default/objects/Opportunity/fields/Company_Engagement_Latest_Updates__c.field-meta.xml
<CustomField>
    <fullName>Company_Engagement_Latest_Updates__c</fullName>
    <label>Company Engagement Latest Updates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>