force-app/main/default/objects/Opportunity/fields/Countries_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Countries_Commitment__c</fullName>
    <label>Countries/places incl. in the commitment</label>
    <type>TextArea</type>
</CustomField>