force-app/main/default/objects/Opportunity/fields/Equitas_Progress__c.field-meta.xml
<CustomField>
    <fullName>Equitas_Progress__c</fullName>
    <label>Equitas Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1) Preparation</fullName>
            </value>
            <value>
                <fullName>2) Go Live</fullName>
            </value>
            <value>
                <fullName>3) Closing</fullName>
            </value>
            <value>
                <fullName>4) Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>