force-app/main/default/objects/Opportunity/fields/Food_Industry_Sector_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Food_Industry_Sector_Opportunity__c</fullName>
    <label>Food Industry Sector (Opportunity)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Packaged Goods</fullName>
            </value>
            <value>
                <fullName>Restaurant or Cafes</fullName>
            </value>
            <value>
                <fullName>Retailer or Convenience</fullName>
            </value>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>