force-app/main/default/objects/Opportunity/fields/LilyTse_Engag_Label_Link_to_Company__c.field-meta.xml
<CustomField>
    <fullName>LilyTse_Engag_Label_Link_to_Company__c</fullName>
    <label>LilyTse Engag Label (Link to Company)</label>
    <type>TextArea</type>
</CustomField>