force-app/main/default/objects/Opportunity/fields/LilyTse_Engagement_Label__c.field-meta.xml
<CustomField>
    <fullName>LilyTse_Engagement_Label__c</fullName>
    <label>LilyTse Engagement Label</label>
    <type>TextArea</type>
</CustomField>