force-app/main/default/objects/Opportunity/fields/LiyTse_Engagement_Actions__c.field-meta.xml
<CustomField>
    <fullName>LiyTse_Engagement_Actions__c</fullName>
    <label>LiyTse Engagement Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Researching</fullName>
            </value>
            <value>
                <fullName>Research completed</fullName>
            </value>
            <value>
                <fullName>Reachout message sent</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Cold Visit-met</fullName>
            </value>
            <value>
                <fullName>Cold visit- failed</fullName>
            </value>
            <value>
                <fullName>Materials Sent</fullName>
            </value>
            <value>
                <fullName>To-be Met</fullName>
            </value>
            <value>
                <fullName>Met</fullName>
            </value>
            <value>
                <fullName>Soft pressure</fullName>
            </value>
            <value>
                <fullName>smoothly progressing</fullName>
            </value>
            <value>
                <fullName>Equitas in action</fullName>
            </value>
            <value>
                <fullName>Confronting</fullName>
            </value>
            <value>
                <fullName>Close to end</fullName>
            </value>
            <value>
                <fullName>Declined - to be continued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>