force-app/main/default/objects/Opportunity/fields/Number_of_Hens_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hens_Impacted__c</fullName>
    <label>Number of Hens Impacted.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>