force-app/main/default/objects/Opportunity/fields/Other_related_Accounts_1__c.field-meta.xml
<CustomField>
    <fullName>Other_related_Accounts_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other related Company (1)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Other related Accounts (1))</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>