force-app/main/default/objects/Opportunity/fields/Other_related_Accounts_2__c.field-meta.xml
<CustomField>
    <fullName>Other_related_Accounts_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other related Company (2)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Other related Accounts (2))</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>