force-app/main/default/objects/Opportunity/fields/Readiness_to_switch__c.field-meta.xml
<CustomField>
    <fullName>Readiness_to_switch__c</fullName>
    <label>Readiness to switch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1) Rejected</fullName>
            </value>
            <value>
                <fullName>2) Not ready</fullName>
            </value>
            <value>
                <fullName>3) Considering</fullName>
            </value>
            <value>
                <fullName>4) Ready</fullName>
            </value>
            <value>
                <fullName>5) Switching</fullName>
            </value>
            <value>
                <fullName>6) Switched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>