force-app/main/default/objects/Opportunity/fields/Scope_of_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Commitment__c</fullName>
    <label>Scope of Commitment</label>
    <type>TextArea</type>
</CustomField>