force-app/main/default/objects/Opportunity/fields/Type_of_Public_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Public_Engagement__c</fullName>
    <label>Type of Public Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Press Conference</fullName>
            </value>
            <value>
                <fullName>Interview</fullName>
            </value>
            <value>
                <fullName>Celebrity Activity</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Protests</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>