force-app/main/default/objects/Opportunity/fields/Year_Committed__c.field-meta.xml
<CustomField>
    <fullName>Year_Committed__c</fullName>
    <label>Year Committed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>