force-app/main/default/objects/Opportunity/recordTypes/Company_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Company_Engagement</fullName>
    <active>true</active>
    <businessProcess>Company Engagement</businessProcess>
    <label>Company Engagement</label>
</RecordType>