force-app/main/default/objects/Opportunity/recordTypes/Public_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Public_Engagement</fullName>
    <active>true</active>
    <businessProcess>Public Engagement</businessProcess>
    <label>Public Engagement</label>
</RecordType>