force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Countries_Commitment__c</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Food_Industry_Sector_Opportunity__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>LiyTse_Engagement_Actions__c</columns>
    <columns>LilyTse_Engag_Label_Link_to_Company__c</columns>
    <columns>LilyTse_Engagement_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Opportunities</label>
</ListView>